feat:(Backend): Backend_task implementation and Telegram bot OTP
